Fixed layout issues on component_date and service_autocomplete

--- a/core/page/css/layout/list.less
+++ b/core/page/css/layout/list.less
@@ -72,7 +72,12 @@
 
 
 // section_record
-	.section_record.list {
+	.section_record {
+
+		&.mini {
+			display: contents;
+		}
+
 		// position: relative;
 		// &:hover {
 		// 	&:before {
